Changed some styling

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="main-content">
       <div class="col-md-2 visible-lg visible-md" id="side-bar">
         <ul>
-          <li class="selected">Home</li>
-          <li>How it works</li>
-          <li>The source</li>
+          <li class="selected"><a href="#">Home</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="https://github.com/Yuhao93/videoastext" target="_blank">The source</a></li>
         </ul>
       </div>
       <div class="col-md-10">
