--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="col-md-2 visible-lg visible-md" id="side-bar">
         <ul>
           <li class="selected"><a href="#">Home</a></li>
-          <li><a href="#">How it works</a></li>
+          <li><a href="/how.html">How it works</a></li>
           <li><a href="https://github.com/Yuhao93/videoastext" target="_blank">The source</a></li>
         </ul>
       </div>
